added profile picture
